@@ -4,6 +4,10 @@
   * Added a dialog to jump directly to a position, with a default key of J
   * Enter/Esc will do what you'd expect on the startup dialog
   * World list is now scrollable, on main startup screen
+  * A startup warning was added for Windows systems about possible region
+    corruption if X-Ray is run at the same time as Minecraft.  (I haven't
+    heard reports of this yet, but given the way Windows locks files, it
+    could potentially be an issue.)
 
 Minecraft X-Ray 2.7 Maintenance Branch 9 (2011.02.22)
 
